Updated RTA CSS; fixed scrollbar issues in IE

--- a/static/elements.css
+++ b/static/elements.css
@@ -144,31 +144,37 @@ button:hover {
 	-moz-padding-start: 5px;
 }
 
-.richtextarea, .richtextarea textarea {
+.richtextarea pre, .richtextarea textarea {
 	font-size: 16px !important;
 	font-family: monospace !important;
 	color: black !important;
 }
 
-.richtextarea textarea {
-	border: 0;
-	padding: 0;
-	margin: 0;
-	opacity: 0.2;
-	filter: alpha(opacity = 20);
-	min-width: 100%;
-	min-height: 100%;
-	overflow: hidden;
-	background: 0;
+.richtextarea label {
 	position: absolute;
 	top: 0;
 	left: 0;
-	outline: none;
-	resize: none;
+	width: 100%;
+	height: 100%;
+	display: inline-block;
 	padding: 4px;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
+}
+
+.richtextarea textarea {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	background: 0;
+	outline: none;
+	resize: none;
+	min-width: 100%;
+	min-height: 100%;
+	overflow: hidden;
+	opacity: 0.2;
+	filter: alpha(opacity = 20);
 }
 
 /* syntax highlighting */
